--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@ client/node_modules/
 server/node_modules/
 
 # env
-.env
 server/.env
 client/.env
 
@@ -19,4 +18,7 @@ dist/
 build/
 coverage/
 .idea
+
+# repo
+./Emotion-Recognition_SER-FER_RAVDESS
 
